refactored with DDD structure

--- a/music_sns/android/local.properties
+++ b/music_sns/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\rlaal\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\rlaal\\flutter
+sdk.dir=/Users/bepro/Library/Android/sdk
+flutter.sdk=/Users/bepro/development/flutter
