로그인 페이지 디자인 적용

--- a/music_sns/android/local.properties
+++ b/music_sns/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=C:\\Users\\rlaal\\AppData\\Local\\Android\\sdk
+sdk.dir=C:/Users/rlaal/AppData/Local/Android/Sdk
 flutter.sdk=C:\\Users\\rlaal\\flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
