--- a/music_sns/android/local.properties
+++ b/music_sns/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:/Users/rlaal/AppData/Local/Android/Sdk
-flutter.sdk=C:\\Users\\rlaal\\flutter
+sdk.dir=/Users/bepro/Library/Android/sdk
+flutter.sdk=/Users/bepro/development/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
