--- a/feelin/pubspec.yaml
+++ b/feelin/pubspec.yaml
@@ -22,13 +22,17 @@ dependencies:
   shared_preferences: ^2.0.13
   flutter_secure_storage: ^6.0.0
   webview_flutter: ^3.0.4
+  json_annotation:
+  freezed_annotation: ^2.1.0
+  bloc: ^8.1.0
+  cached_network_image: ^3.2.1
+  flutter_inappwebview: ^5.4.3+7
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
-  freezed_annotation:
   injectable_generator:
   build_runner:
   json_serializable:
