--- a/feelin/pubspec.yaml
+++ b/feelin/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
 
   # date format
   intl:
+  modal_bottom_sheet: ^2.1.2
+  tuple: ^2.0.1
+  palette_generator: ^0.3.3+2
 
 dev_dependencies:
   flutter_test:
