--- a/feelin/pubspec.yaml
+++ b/feelin/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   modal_bottom_sheet: ^2.1.2
   tuple: ^2.0.1
   palette_generator: ^0.3.3+2
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
