--- a/feelin/pubspec.yaml
+++ b/feelin/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   tuple: ^2.0.1
   palette_generator: ^0.3.3+2
   change_app_package_name: ^1.1.0
+  fluttertoast: ^8.1.2
 
 dev_dependencies:
   flutter_test:
