--- a/feelin/pubspec.yaml
+++ b/feelin/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   external_app_launcher: ^3.1.0
   firebase_core: ^2.1.1
   hexcolor:
+  flutter_svg: ^1.1.6
 
   # share
   share_plus: ^6.3.0
@@ -92,16 +93,19 @@ flutter:
   # For details regarding font from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
-fonts:
-  - family: SpoqaHanSansNeo
-    fonts:
-      - asset: assets/font/SpoqaHanSansNeo_OTF_subset/SpoqaHanSansNeo-Thin.otf
-        weight: 100
-      - asset: assets/font/SpoqaHanSansNeo_OTF_subset/SpoqaHanSansNeo-Light.otf
-        weight: 300
-      - asset: assets/font/SpoqaHanSansNeo_OTF_subset/SpoqaHanSansNeo-Regular.otf
-        weight: 400
-      - asset: assets/font/SpoqaHanSansNeo_OTF_subset/SpoqaHanSansNeo-Medium.otf
-        weight: 500
-      - asset: assets/font/SpoqaHanSansNeo_OTF_subset/SpoqaHanSansNeo-Bold.otf
-        weight: 700
+  assets:
+    - assets/icons/
+
+  fonts:
+    - family: SpoqaHanSansNeo
+      fonts:
+        - asset: assets/font/SpoqaHanSansNeo_OTF_subset/SpoqaHanSansNeo-Thin.otf
+          weight: 100
+        - asset: assets/font/SpoqaHanSansNeo_OTF_subset/SpoqaHanSansNeo-Light.otf
+          weight: 300
+        - asset: assets/font/SpoqaHanSansNeo_OTF_subset/SpoqaHanSansNeo-Regular.otf
+          weight: 400
+        - asset: assets/font/SpoqaHanSansNeo_OTF_subset/SpoqaHanSansNeo-Medium.otf
+          weight: 500
+        - asset: assets/font/SpoqaHanSansNeo_OTF_subset/SpoqaHanSansNeo-Bold.otf
+          weight: 700
