--- a/feelin/ios/Runner/Info.plist
+++ b/feelin/ios/Runner/Info.plist
@@ -83,7 +83,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<string>YES</string>
+	<key>LSApplicationQueriesSchemes</key>
+        <array>
+            <string>https</string>
+            <string>http</string>
+        </array>
 </dict>
 </plist>
