--- a/feelin/pubspec.yaml
+++ b/feelin/pubspec.yaml
@@ -2,7 +2,7 @@ name: music_sns
 description: A new Flutter project.
 
 
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -49,6 +49,8 @@ dependencies:
   top_snackbar_flutter: ^3.0.0+1
   sms_autofill: ^2.2.0
   url_launcher: ^6.1.8
+  auto_size_text: ^3.0.0
+  focus_detector: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -107,12 +109,6 @@ flutter:
   fonts:
     - family: Pretendard
       fonts:
-        - asset: assets/font/pretendard/Pretendard-Thin.otf
-          weight: 100
-        - asset: assets/font/pretendard/Pretendard-ExtraLight.otf
-          weight: 200
-        - asset: assets/font/pretendard/Pretendard-Light.otf
-          weight: 300
         - asset: assets/font/pretendard/Pretendard-Regular.otf
           weight: 400
         - asset: assets/font/pretendard/Pretendard-Medium.otf
@@ -121,7 +117,3 @@ flutter:
           weight: 600
         - asset: assets/font/pretendard/Pretendard-Bold.otf
           weight: 700
-        - asset: assets/font/pretendard/Pretendard-ExtraBold.otf
-          weight: 800
-        - asset: assets/font/pretendard/Pretendard-Black.otf
-          weight: 900
