--- a/feelin/pubspec.yaml
+++ b/feelin/pubspec.yaml
@@ -50,8 +50,9 @@ dependencies:
   sms_autofill: ^2.2.0
   url_launcher: ^6.1.8
   auto_size_text: ^3.0.0
-  focus_detector: ^2.0.1
   animated_text_kit: ^4.2.2
+  visibility_detector: ^0.2.2
+  package_info_plus: ^3.0.2
 
 dev_dependencies:
   flutter_test:
