--- a/feelin/ios/Runner/Info.plist
+++ b/feelin/ios/Runner/Info.plist
@@ -91,6 +91,7 @@
         <array>
             <string>https</string>
             <string>http</string>
+            <string>mailto</string>
         </array>
     <key>LSApplicationQueriesSchemes</key>
     <array>
