--- a/feelin/pubspec.yaml
+++ b/feelin/pubspec.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 version: 1.0.2+3
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,7 +29,6 @@ dependencies:
   external_app_launcher: ^3.1.0
   firebase_core: ^2.1.1
   hexcolor:
-  flutter_svg: ^1.1.6
 
   # share
   share_plus: ^6.3.0
@@ -107,6 +106,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/logos/
 
   fonts:
     - family: Pretendard
